--- a/creat/package.json
+++ b/creat/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.10.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
+    "@react-keycloak/web": "^3.4.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -15,10 +18,24 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.1",
+    "firebase": "^9.8.1",
+    "git-cz": "^4.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "keycloak-js": "^18.0.0",
+    "mysql2": "^2.3.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-json-pretty": "^2.2.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sequelize": "^6.19.0",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
